perf(core): fingerprint the watched init file without reading it all into memory
With watchInitializationJson=true, FileWatcher re-read the entire file on every
poll - default every 5 seconds - to fingerprint it, whether or not the file had
changed. Each read allocated a byte array the size of the file, so a 10 MB
initialization file produced roughly 360 MB of garbage every three minutes on a
server handling no traffic at all. In G1 each of those arrays is large enough to
be a humongous allocation, which bypasses the young generation.

Measured on an idle 256 MB-heap server with zero traffic: watching turned zero
garbage collections into two, both triggered by humongous allocation, with the
heap repeatedly filling to ~230 MB and being collected. The file is now streamed
through a fixed 64 KB buffer, and the same idle server performs no collections
at all. The cost scales with file size, with how many files a glob path expands
to, and inversely with the poll period, so a larger file or a broader glob was
proportionally worse.

The arithmetic is unchanged - Arrays.hashCode's, computed incrementally - so the
fingerprint is identical, though nothing depends on that since it is only ever
compared with another reading of the same file. What the contract needs is
stability for unchanged content and sensitivity to changed content.

Three tests pin the failure modes a chunked loop introduces that a whole-file
read could not have: a change in the final byte of a multi-buffer file, a change
confined to bytes above 0x7F, and silence across many polls of an unchanged
multi-buffer file. Each is degrade-proven - dropping the final partial read
fails the first, decoding the stream as text rather than reading bytes fails the
second. The second test's comment says plainly what it does NOT pin: masking
each byte would change every hash value and still pass, correctly.

Also makes two pre-existing sleeps in the same test class track POLL_PERIOD_MILLIS
instead of repeating its value.